Updated sampling script to ignore 'N' characters

--- a/sample_genome.ipynb
+++ b/sample_genome.ipynb
@@ -20,28 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# declare genome fasta file to sample\n",
-    "fasta_file = 'v_sars-cov-2.fasta'"
+    "fasta_file = 'v_sars-cov-2.fasta'\n",
+    "# fasta_file = 'h_human-x.fasta'\n",
+    "# fasta_file = 'h_human-y.fasta'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "29903"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New sequence\n",
+      "29903\n"
+     ]
     }
    ],
    "source": [
@@ -53,12 +53,14 @@
     "for line in fasta:\n",
     "    if line[0] != '>':\n",
     "        genome += line[:-1]\n",
-    "len(genome)"
+    "    else:\n",
+    "        print('New sequence')\n",
+    "print(len(genome))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +77,14 @@
     "    f = open(os.path.join(save_dir, f'{name}_{l}.fasta'), 'w')\n",
     "\n",
     "    for i in range(N):\n",
+    "        N_present = True\n",
+    "        while N_present:\n",
+    "            start = np.random.randint(G - l)\n",
+    "            sample = genome[start:start+l]\n",
+    "            if not 'N' in sample:\n",
+    "                N_present = False\n",
     "        f.write(f'>{name} sample {i}\\n')\n",
-    "        start = np.random.randint(G - l)\n",
-    "        f.write(genome[start:start+l])\n",
+    "        f.write(sample)\n",
     "        f.write('\\n')\n",
     "    f.close()"
    ]
