Added human chromosome 3 but too big for git

--- a/sample_genome.ipynb
+++ b/sample_genome.ipynb
@@ -20,19 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# declare genome fasta file to sample\n",
-    "fasta_file = 'v_sars-cov-2.fasta'\n",
-    "# fasta_file = 'h_human-x.fasta'\n",
-    "# fasta_file = 'h_human-y.fasta'"
+    "# fasta_file = 'v_sars-cov-2.fasta'\n",
+    "fasta_file = 'h_human-3.fasta'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "New sequence\n",
-      "29903\n"
+      "198295559\n"
      ]
     }
    ],
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
