Added result evaluation script and updated sample genome script

--- a/sample_genome.ipynb
+++ b/sample_genome.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,72 +20,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# declare genome fasta file to sample\n",
-    "# fasta_file = 'v_sars-cov-2.fasta'\n",
-    "fasta_file = 'h_human-3.fasta'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New sequence\n",
-      "198295559\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# load genome\n",
-    "with open(os.path.join('data', 'genomes', fasta_file), 'r') as f:\n",
-    "    fasta = f.readlines()\n",
+    "# function to sample all genomes in a directory\n",
+    "def sample_genomes(genome_dir, N=1000, contig_lengths=[25, 50, 100, 150, 300, 500, 1000, 3000]):\n",
+    "    for fasta_file in os.listdir(genome_dir):\n",
+    "        if '.fasta' in fasta_file or '.fa' in fasta_file:\n",
+    "            print('--------------------------------------------------------------')\n",
+    "            print(f'File: {fasta_file}')\n",
     "\n",
-    "genome = ''\n",
-    "for line in fasta:\n",
-    "    if line[0] != '>':\n",
-    "        genome += line[:-1]\n",
-    "    else:\n",
-    "        print('New sequence')\n",
-    "print(len(genome))"
+    "            # load genome\n",
+    "            with open(os.path.join(genome_dir, fasta_file), 'r') as f:\n",
+    "                fasta = f.readlines()\n",
+    "\n",
+    "            genome = ''\n",
+    "            for line in fasta:\n",
+    "                if line[0] != '>':\n",
+    "                    genome += line[:-1]\n",
+    "                else:\n",
+    "                    print('New sequence')\n",
+    "            print(f'Genome length: {len(genome)}')\n",
+    "\n",
+    "            # sample genome at different contig lengths and save to files\n",
+    "            G = len(genome)\n",
+    "            name = fasta_file.split('.')[0]\n",
+    "\n",
+    "            for l in contig_lengths:\n",
+    "                save_dir = os.path.join('data', 'contigs', name)\n",
+    "                if not os.path.exists(save_dir):\n",
+    "                    os.makedirs(save_dir)\n",
+    "                f = open(os.path.join(save_dir, f'{name}_{l}.fasta'), 'w')\n",
+    "\n",
+    "                for i in range(N):\n",
+    "                    N_present = True\n",
+    "                    while N_present:\n",
+    "                        start = np.random.randint(G - l)\n",
+    "                        sample = genome[start:start+l]\n",
+    "                        if not 'N' in sample:\n",
+    "                            N_present = False\n",
+    "                    f.write(f'>{name} sample {i}\\n')\n",
+    "                    f.write(sample)\n",
+    "                    f.write('\\n')\n",
+    "                f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sample genome at different contig lengths and save to files\n",
-    "contig_lengths = [25, 50, 100, 150, 300, 500, 1000, 3000]\n",
-    "N = 10000\n",
-    "G = len(genome)\n",
-    "name = fasta_file.split('.')[0]\n",
-    "\n",
-    "for l in contig_lengths:\n",
-    "    save_dir = os.path.join('data', 'contigs', name)\n",
-    "    if not os.path.exists(save_dir):\n",
-    "        os.makedirs(save_dir)\n",
-    "    f = open(os.path.join(save_dir, f'{name}_{l}.fasta'), 'w')\n",
-    "\n",
-    "    for i in range(N):\n",
-    "        N_present = True\n",
-    "        while N_present:\n",
-    "            start = np.random.randint(G - l)\n",
-    "            sample = genome[start:start+l]\n",
-    "            if not 'N' in sample:\n",
-    "                N_present = False\n",
-    "        f.write(f'>{name} sample {i}\\n')\n",
-    "        f.write(sample)\n",
-    "        f.write('\\n')\n",
-    "    f.close()"
+    "genome_dir = os.path.join('data', 'prokaryote_genomes')\n",
+    "sample_genomes(genome_dir)"
    ]
   }
  ],
