DeepVirFinder results over large dataset

--- a/sample_genome.ipynb
+++ b/sample_genome.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +68,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------\n",
+      "File: v_phage-synechococcus-s-eivi.fasta\n",
+      "New sequence\n",
+      "Genome length: 79178\n",
+      "--------------------------------------------------------------\n",
+      "File: h_bacteria-zobellia-galactanivorans.fasta\n",
+      "New sequence\n",
+      "Genome length: 5521712\n",
+      "--------------------------------------------------------------\n",
+      "File: v_phage-aeromonas-phia047.fasta\n",
+      "New sequence\n",
+      "Genome length: 121865\n",
+      "--------------------------------------------------------------\n",
+      "File: h_bacteria-parasphingopyxis-algicola.fasta\n",
+      "New sequence\n",
+      "Genome length: 3669801\n",
+      "--------------------------------------------------------------\n",
+      "File: v_phage-rhodococcus-p19.fasta\n",
+      "New sequence\n",
+      "Genome length: 17065\n",
+      "--------------------------------------------------------------\n",
+      "File: h_bacteria-bombilactobacillus-bombi.fasta\n",
+      "New sequence\n",
+      "Genome length: 1842084\n",
+      "--------------------------------------------------------------\n",
+      "File: h_archaea-acidianus-ambivalens.fasta\n",
+      "New sequence\n",
+      "Genome length: 2252027\n",
+      "--------------------------------------------------------------\n",
+      "File: v_arch-vir-anmv-1.fasta\n",
+      "New sequence\n",
+      "Genome length: 38465\n",
+      "--------------------------------------------------------------\n",
+      "File: v_arch-vir-los-azufres-1.fasta\n",
+      "New sequence\n",
+      "Genome length: 21184\n",
+      "--------------------------------------------------------------\n",
+      "File: h_archaea-nitrosopumilus-oxyclinae.fasta\n",
+      "New sequence\n",
+      "Genome length: 1585110\n"
+     ]
+    }
+   ],
    "source": [
-    "genome_dir = os.path.join('data', 'prokaryote_genomes')\n",
+    "genome_dir = os.path.join('data', 'genomes')\n",
     "sample_genomes(genome_dir)"
    ]
   }
